fix: pre tag overflow issues

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -45,3 +45,8 @@ blockquote {
 blockquote p {
   display: inline;
 }
+
+pre {
+  max-width: 100vw;
+  overflow-x: auto;
+}
